[gd_scene load_steps=17 format=2]

[ext_resource path="res://fonts/xolfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/UI.gd" type="Script" id=2]
[ext_resource path="res://art/image-23_vectorized.png" type="Texture" id=3]
[ext_resource path="res://art/image-23_vectorizedback.png" type="Texture" id=4]
[ext_resource path="res://art/star.png" type="Texture" id=5]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ships/ship_0.png" type="Texture" id=7]
[ext_resource path="res://scenes/shop.gd" type="Script" id=8]
[ext_resource path="res://ships/ship_6.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.215686, 0.231373, 0.278431, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.215686, 0.231373, 0.278431, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.278431, 0.298039, 0.364706, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 2

[sub_resource type="InputEventAction" id=1]
action = "start_game"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="shop" type="Control" parent="."]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="star2" type="Sprite" parent="shop"]
position = Vector2( 224, 560 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="starcount2" type="RichTextLabel" parent="shop"]
margin_left = 237.0
margin_top = 552.0
margin_right = 277.0
margin_bottom = 592.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]5[/center]"
text = "5"

[node name="shopmsg" type="RichTextLabel" parent="shop"]
margin_left = 140.0
margin_top = 588.0
margin_right = 340.0
margin_bottom = 628.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
scroll_active = false

[node name="current" type="Control" parent="shop"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 150.0
margin_right = 20.0
margin_bottom = 190.0

[node name="cur" type="Sprite" parent="shop/current"]
position = Vector2( 20, 25 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="S" type="ScrollContainer" parent="shop"]
show_behind_parent = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 93.0
margin_top = -480.0
margin_right = 93.0

[node name="G" type="GridContainer" parent="shop/S"]
margin_right = 480.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Inv1" type="TextureRect" parent="shop/S/G"]
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
texture = ExtResource( 9 )
expand = true

[node name="buybtn" type="Button" parent="shop"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -224.0
margin_right = 40.0
margin_bottom = -179.0
focus_mode = 0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
shortcut = SubResource( 2 )
text = "Buy"

[node name="score" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_bottom = 79.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"
fit_content_height = true
scroll_active = false

[node name="message" type="RichTextLabel" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.0
margin_bottom = 79.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Shoot the Creeps![/center]"
text = "Shoot the Creeps!"
fit_content_height = true
scroll_active = false

[node name="startbtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -200.0
margin_right = 90.0
margin_bottom = -100.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
shortcut = SubResource( 2 )
text = "Start"

[node name="shopbtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -95.0
margin_right = 92.0
margin_bottom = -11.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
shortcut = SubResource( 2 )
text = "Shop"

[node name="MsgTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="VSlider" type="VSlider" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -170.0
margin_right = -14.0
margin_bottom = -20.0
value = 100.0

[node name="health" type="TextureProgress" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 255.0
margin_right = 3316.0
margin_bottom = 1551.0
rect_scale = Vector2( 0.1, 0.1 )
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[node name="stars" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0

[node name="star" type="Sprite" parent="stars"]
position = Vector2( 0, 35 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="starcount" type="RichTextLabel" parent="stars"]
margin_left = -20.0
margin_top = 50.0
margin_right = 20.0
margin_bottom = 90.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"

[connection signal="pressed" from="shop/buybtn" to="." method="_on_buybtn_pressed"]
[connection signal="pressed" from="startbtn" to="." method="_on_start_pressed"]
[connection signal="pressed" from="shopbtn" to="." method="_on_shopbtn_pressed"]
[connection signal="timeout" from="MsgTimer" to="." method="_on_msg_timeout"]
[connection signal="value_changed" from="VSlider" to="." method="volume_changed"]
